examples/test/testpolicy11001.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11001
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key38: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value6
      podSelector:
        matchLabels:
          key11: value47
          key44: value25
          key21: value39
